laborations/lab1/testsuite/good/synthetic014.cc
int main() {
	if (t)
		return x1 ? x2 : x3;
}
