laborations/lab1/testsuite/bad/bad040.cc
int foo() {
	if (4) { } elseif { return 2; }
}
